export interface StorageLocation {
    row?: number;
    shelf?: number;
}
